# Sluice

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.firn.yml  docker-compose.offline.yml  docker-compose.yml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
config/: callers.json  facilitator.json  otel-collector.yaml  prometheus.yml  rules.json  seed.json
config/grafana/dashboards/: sluice.json
config/grafana/provisioning/dashboards/: provider.yaml
config/grafana/provisioning/datasources/: datasources.yaml
contracts/: MockUSDC.sol
demo-origin/: Cargo.toml
demo-origin/src/: main.rs
docs/: gotchas.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  paid-but-failed.md  rung-2.md  testnet.md
gateway/: Cargo.toml
gateway/src/: main.rs
indexer/: Cargo.toml
indexer/src/: main.rs
migrations/: 0001_payments.sql  0002_origin_status.sql
rules/: Cargo.toml
rules/src/: lib.rs
scripts/: cargo.sh  deploy-mock.sh  fund-mock.sh  fund-usdc.sh  pay-with-curl.sh  seed-firn.sh
