[package]
name = "gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
rules = { path = "../rules" }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# "telemetry" is effectively required: 2.0.1 references `tracing` outside
# the feature gate and fails to compile without it.
x402-axum = { workspace = true, features = ["telemetry"] }
x402-chain-eip155 = { workspace = true, features = ["server", "telemetry"] }
x402-types = { workspace = true }

alloy-primitives = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
